@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.27 2002/01/17 11:06:45 ukai Exp $ */
+/* $Id: proto.h,v 1.28 2002/01/21 17:57:28 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -485,6 +485,7 @@ extern void add_auth_cookie(char *host, int port, char *realm, Str cookie);
 extern char *last_modified(Buffer *buf);
 extern Str romanNumeral(int n);
 extern Str romanAlphabet(int n);
+extern void reset_signals(void);
 extern void mySystem(char *command, int background);
 extern Str myExtCommand(char *cmd, char *arg, int redirect);
 extern Str myEditor(char *cmd, char *file, int line);
